--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My project builder",
   "main": "src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open"
@@ -20,10 +20,21 @@
   },
   "homepage": "https://github.com/NikolayBV/made_pack#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/redux-logger": "^3.0.9",
+    "babel-jest": "^29.2.2",
     "css-loader": "^6.7.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
@@ -36,8 +47,12 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.10.11",
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/jest": "^29.2.0",
+    "babel-preset-react": "^6.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "redux-logger": "^3.0.6",
+    "ts-node": "^10.9.1"
   }
 }
